--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-modals",
-  "version": "0.0.4",
+  "name": "@thirdwheel-studios/angular-modals",
+  "version": "0.0.5",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
