--- a/projects/angular-modals/package.json
+++ b/projects/angular-modals/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@thirdwheel-studios/angular-modals",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/thirdwheelstudios/angular-modals.git"
+  },
   "peerDependencies": {
     "@angular/common": "^9.0.7",
     "@angular/core": "^9.0.7",
