--- a/projects/angular-modals/package.json
+++ b/projects/angular-modals/package.json
@@ -2,10 +2,17 @@
   "name": "@thirdwheel-studios/angular-modals",
   "version": "0.1.6",
   "private": false,
+  "description": "Lightweight library for creating modal dialogs in Angular",
   "repository": {
     "type": "git",
     "url": "https://github.com/thirdwheelstudios/angular-modals.git"
   },
+  "author": "Phil Crossland",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/thirdwheelstudios/angular-modals/issues"
+  },
+  "homepage": "https://github.com/thirdwheelstudios/angular-modals",
   "peerDependencies": {
     "@angular/common": "^9.0.7",
     "@angular/core": "^9.0.7",
